--- a/flower-store/assets/scss/index.scss
+++ b/flower-store/assets/scss/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;0,600;0,900;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;500;700&display=swap');
 
 $tablet-width: 768px;
@@ -245,6 +245,7 @@ body {
     .img_banner {
         width: 100%;
         height: auto;
+        object-fit: cover;
 
         @include tablet() {
             height: 412px;
@@ -356,113 +357,130 @@ body {
 
     .carousel-item {
         padding: 15px;
+    }
 
-        .smallbox_product {
-            margin-top: 50px;
-            background-color: rgb(230, 227, 218);
-            box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.19);
-            width: 90%;
-            margin: auto;
+    .smallbox_product {
+        margin-top: 50px;
+        background-color: rgb(230, 227, 218);
+        box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.19);
+        width: 90%;
+        margin: auto;
 
 
-            .like_product {
-                
-                .love_icon {
-                    float: right;
-                    font-size: 20px;
-                    margin-top: 15px;
-                    padding-right: 15px;
-                    margin-bottom: 10px;
-                }
+        .like_product {
+            
+            .love_icon {
+                float: right;
+                font-size: 20px;
+                margin-top: 15px;
+                padding-right: 15px;
+                margin-bottom: 10px;
             }
+        }
 
-            .product_img {
+        .product_img {
+            width: 100%;
+            height: 310px;
+            overflow: hidden;
+
+            .product_pic {
                 width: 100%;
-                height: 291px;
-                overflow: hidden;
-
-                .product_pic {
-                    width: 100%;
-                    height: 100%;
-                }
+                height: 100%;
+                object-fit: cover;
             }
 
-            .detail_product {
-                margin-top:  30px;
-                padding: 0px 40px 20px;
+            @include desktop() {
+                height: 350px;
+            }
+        }
 
-                .detail_product_title {
-                    font-family: 'Playfair Display', serif;
-                    color: #484a4b;
-                    font-weight: bold;
-                    line-height: 0.905;
-                    text-align: center;
-                    font-size: 30px;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
+        .detail_product {
+            margin-top:  30px;
+            padding: 0px 40px 20px;
 
-                    @include tablet() {
-                        overflow: unset;
-                    }
+            .detail_product_title {
+                font-family: 'Playfair Display', serif;
+                color: #484a4b;
+                font-weight: bold;
+                line-height: 0.905;
+                text-align: center;
+                font-size: 30px;
+                overflow: hidden;
+                text-overflow: ellipsis;
 
-                    @include desktop() {
-                        overflow: unset;
-                    }
+                @include tablet() {
+                    overflow: unset;
+                }
+
+                @include desktop() {
+                    overflow: unset;
+                }
+            }
+            
+            .detail_product_text {
+                font-family: 'Montserrat Alternates', sans-serif;
+                font-size: 12px;
+                line-height: 1.333;
+                color: #6b502c;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+            
+            .read_product {
+                font-family: 'Montserrat Alternates', sans-serif;
+                border: none;
+                background-color: #454545;
+                border-radius: 8px;
+                padding:4px 16px;
+                color:#e6e3da;
+                font-size: 10px;
+                white-space: nowrap;
+
+                @include desktop() {
+                    font-size: 15px;
                 }
                 
-                .detail_product_text {
-                    font-family: 'Montserrat Alternates', sans-serif;
-                    font-size: 12px;
-                    line-height: 1.333;
-                    color: #6b502c;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
-                
-                .read_product {
-                    font-family: 'Montserrat Alternates', sans-serif;
-                    border: none;
-                    background-color: #454545;
-                    border-radius: 8px;
-                    padding:4px 16px;
-                    color:#e6e3da;
-                    font-size: 10px;
-                    white-space: nowrap;
-
-                    @include desktop() {
-                        font-size: 15px;
-                    }
-                    
-                }
             }
         }
     }
 
+    
     .button_carousel {
         margin-top: 30px; 
-        // background-image: url("../img/left_left.png"), url("../img/left_right.png");
-        // background-position: bottom left , bottom right;
-        // background-repeat: no-repeat;
-        // background-size: 7%;
+        position: relative;
+
+        &::before {
+            content: "";
+            background-image: url("../img/leaf_blog.png");
+            position: absolute;
+            background-size: 100%;
+            background-position: right;
+            background-repeat: no-repeat;
+            width: 67px;
+            height: 67px;
+            right: 10%;
+        }
+
+        &::after {
+            content: "";
+            background-image: url("../img/leaf_blog.png");
+            position: absolute;
+            background-size: 100%;
+            background-position: right;
+            background-repeat: no-repeat;
+            width: 67px;
+            height: 67px;
+            left: 10%;
+            transform: scaleX(-1);
+        }
 
         .carousel-control-next, .carousel-control-prev {
             position: relative;
             display: inline-block ;
             background-color: #454545;
-            border-radius: 100%;
-            padding: 15px 10px 8px;
-
-            @include tablet() {
-                border-radius: 25px;
-                padding: 5px 5px 1px;
-                width: 5%;
-            }
-
-            @include desktop() {
-                border-radius: 25px;
-                padding: 5px 5px 1px;
-                width: 5%;
-            }
+            height: 60px;
+            width: 60px;
+            border-radius: 50%;
         }
     }
 
@@ -489,86 +507,126 @@ body {
         margin-top: 100px;
     }
 
-    .box_aboutus_title {
-
-        .aboutus_title {
-            font-family: 'Playfair Display', serif;
-            font-weight: bold;
-            line-height: 0.905;
-            color: #484a4b;
-            font-size: 35px;
-
-            @include tablet() {
-                font-size: 100px;
-            }
-
-            @include desktop() {
-                font-size: 134px;
-            }
-        }
-        
-        .aboutus_small_title {
-            font-family: 'Montserrat Alternates', sans-serif;
-            color:#765a33;
-            font-size: 16px;
-
-            @include tablet() {
-                font-size: 20px;
-            }
-
-            @include desktop() {
-                font-size: 25px;
-            }
-        }
-    }
-
-    .box_video_aboutus {
-        margin-top: 50px;
+    .box_about_us {
         position: relative;
-        z-index: 1;
 
-        .aboutus_pic {
-            width: 100%;
-        }
-
-        .fa-play-circle {
+        &::before {
+            content: "";
+            background-image: url("../img/leaf_aboutus2.png");
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #ffffff;
-            font-size: 50px;
-
-            @include desktop() {
-                font-size: 80px;
-            }
+            background-size: 7%;
+            background-position: top left;
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 100%;
         }
 
         &::after {
             content: "";
+            background-image: url("../img/leaf_aboutus.png");
             position: absolute;
-            bottom: -25px;
-            left: -15px;
-            width: 100px;
-            height: 100px;
-            background-color: #c87e6b;
-            z-index: -1;
+            background-size: 7%;
+            background-position: center right;
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 100%;
+            top: 200px;
+
+            @include desktop() {
+                top: 400px
+            }
+            
         }
 
-        &::before {
-            content: "";
-            position: absolute;
-            top: -20px;
-            right:-15px;
-            width: 145px;
-            height: 100px;
-            border: 2px solid #8a6a3e;
-            z-index: -1;
+        .box_aboutus_title {
+
+            .aboutus_title {
+                font-family: 'Playfair Display', serif;
+                font-weight: bold;
+                line-height: 0.905;
+                color: #484a4b;
+                font-size: 35px;
+    
+                @include tablet() {
+                    font-size: 100px;
+                }
+    
+                @include desktop() {
+                    font-size: 134px;
+                }
+            }
+            
+            .aboutus_small_title {
+                font-family: 'Montserrat Alternates', sans-serif;
+                color:#765a33;
+                font-size: 16px;
+    
+                @include tablet() {
+                    font-size: 20px;
+                }
+    
+                @include desktop() {
+                    font-size: 25px;
+                }
+            }
+        }
+    
+        .box_video_aboutus {
+            margin-top: 50px;
+            position: relative;
+            z-index: 1;
+    
+            .aboutus_pic {
+                width: 100%;
+            }
+    
+            .fa-play-circle {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: #ffffff;
+                font-size: 50px;
+    
+                @include desktop() {
+                    font-size: 80px;
+                }
+            }
+    
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: -25px;
+                left: -15px;
+                width: 100px;
+                height: 100px;
+                background-color: #c87e6b;
+                z-index: -1;
+            }
+    
+            &::before {
+                content: "";
+                position: absolute;
+                top: -20px;
+                right:-15px;
+                width: 145px;
+                height: 100px;
+                border: 2px solid #8a6a3e;
+                z-index: -1;
+            }
         }
     }
 
     .box_offer {
-        margin-top: 50px;
+        margin-top: 90px;
+
+        @include tablet() {
+            margin-top: 70px;
+        }
+
+        @include desktop() {
+            margin-top: 170px;
+        }
 
         .offer_detail {
             &:nth-child(1) {
@@ -625,7 +683,12 @@ body {
                         font-family: 'Montserrat Alternates', sans-serif;
                         font-weight: bold;
                         line-height: 1;
+                        font-size: 16px;
                         margin-bottom: 0px;
+
+                        @include desktop() {
+                            font-size: 29px;
+                        }
                     }
                 }
 
@@ -665,6 +728,8 @@ body {
 
                 .offer_pic {
                     width: 100%;
+                    object-fit: cover;
+                    height: auto;
                 }
             }
 
@@ -815,6 +880,8 @@ body {
         img {
             width: 100%;
             margin-top: 20px; 
+            height: 100%;
+            object-fit: cover;
 
             @include tablet() {
                 height: 332px;
@@ -981,7 +1048,7 @@ body {
 
             .title_text {
                 font-family: 'Montserrat Alternates', sans-serif;
-                font-weight: bold;
+                font-weight: 600;
                 line-height: 1.2;
                 color: #ffffff;
                 font-size: 24px;
