--- a/floralpage/css/home.css
+++ b/floralpage/css/home.css
@@ -3,7 +3,7 @@
 	padding: 0;
 }
 body {
-    font-family: MontserratAlternates , serif;
+    
 }
 .headerMenu {
 	background-color: #c87e6b;
@@ -14,11 +14,12 @@ body {
 	line-height: 50px;
 }
 .item5 {
-	font-family: PlayfairDisplay;
+	font-family: Playfair Display;
 }
 .hdItem1{
 	text-decoration: none;
 	color: #fff;
+	font-family: Montserrat;
 }
 .hdItem1:hover {
 	color: #fff;
@@ -28,8 +29,7 @@ body {
 	background-color: #c87e6b
 }
 .item2 {
-	color: #fff;
-	font-size: 30px;
+	width: 24px;
 }
 .login {
 	border: 1px #fff solid;
@@ -49,12 +49,23 @@ body {
     margin-left: 30px;
     color: black;
 }
+.sw-item {
+	object-fit: cover;
+    height: 302px;
+    width: 100%;
+    object-position: 0 10%;
+    cursor: pointer;
+}
 /* header */
 .topHeader {
 	width: 25%;
 }
 .leftHeader {
 	width: 25%;
+}
+.lefthd-item {
+	object-fit: fill;
+    height: 45px;
 }
 .midHeader {
 	display: flex;
@@ -71,6 +82,15 @@ body {
 .imgParent2 {
 	max-height: 2400px;
 }
+.righthd-item1 {
+	object-fit: cover;
+	height: 100%;
+	width: 100%;
+	object-position: 0 0;
+}
+.righthd-item2 {
+	width: 100%;
+}
 /* headerFooter */
 .headerFooter {
 	background: url('../img/ctn30.png');
@@ -78,18 +98,13 @@ body {
 .headerItem {
 	text-align: center;
 }
-.item4 {
-	margin-top: 35%;
-	text-align: center;
-}
 .item5 {
 	text-align: center;
-	font-size: 4rem;
     font-weight: 500;
 }
 .item6 {
 	color: #765a33;
-	font-family: MontserratAlternates;
+	font-family: Montserrat Alternates;
 	font-weight: 600;
 }
 .item7 {
@@ -97,6 +112,8 @@ body {
 }
 .item8 , .item9 {
 	list-style: none;
+	font-family: Montserrat Alternates;
+	font-weight: 600;
 }
 .click-hd {
 	text-decoration: none;
@@ -108,6 +125,10 @@ body {
 	padding: 4px 20px;
 	border-radius: 12px;
 	background-color: #787878;
+}
+.active2 {
+	color: red !important;
+	transition: 2s;
 }
 .click-hd2 {
 	text-decoration: none;
@@ -133,12 +154,12 @@ body {
 	color: #fff;
 	cursor: pointer;
 }
-.containerItem , .containerItem2 , .containerItem3{
+.containerItem , .containerItem3{
 	text-align: center;
-	font-family: PlayfairDisplay;
+	font-family: Playfair Display;
 }
-.containerItem > h2 , .containerItem3 > h2 {
-	font-size: 60px;
+.containerItem2 {
+	font-family: Playfair Display;
 }
 .containerItem2{
 	background-color: #e6e3da;
@@ -146,20 +167,18 @@ body {
 .containerItem2 > h3 {
 	font-weight: 600;
 }
-.containerItem2 > span {
+.ctnbw-item {
 	color: #765a33;
 }
-.containerItem2 > button {
+.ctnbw-item2{
 	padding: 4px 30px;
 	background-color: #454545;
 	border-radius: 20px;
 	border:none;
+	text-decoration: none;
 }
-.containerItem2 > button > span {
+.ctnbw-item2 > span {
 	color: #fff;
-}
-.containerItem3 {
-	margin-bottom: 120px;
 }
 .ctnItem1 > img {
 	margin: 15px 15px 0 0;
@@ -191,9 +210,6 @@ body {
 	bottom: 0;
 	width: 100px;
 }
-.containerBottom {
-	padding-bottom: 130px;
-}
 /* ctnbanner */
 .leftctnBanner {
 	background-color: #dbc06e;
@@ -210,40 +226,41 @@ body {
 }
 .ctnBanner-item2 {
 	color: #fff;
-	font-family: PlayfairDisplay;
+	font-family: Playfair Display;
 	font-weight: 600;
-}
-.ctnBanner-item3 {
-	width: 70px;
 }
 .ctnBanner-item4 {
 	text-align: center;
-	width: 50%
 }
 .ctnBanner-item5 {
     font-weight: 600;
-    font-family: MontserratAlternates;
+    font-family: Montserrat Alternates;
     color: #424242;
 }
 .ctnBanner-item6 {
 	text-align: center;
 }
 .ctnBanner-item7 {
-	font-family: MontserratAlternates;
+	font-family: Montserrat Alternates;
 	color: #424242;
+	font-weight: 600;
+}
+.ctnBanner-item10 {
+	object-fit: cover;
+	height: 100%;
+	object-position: 0 10%;
 }
 /* container2 */
-
-.ctnItem1 {
-	margin: 10px 10px 0 0;
+.containerItem2 {
+	padding: 10px 20px;
+	cursor: pointer;
 }
-.ctnItem1 > i {
+.item-heart{
 	font-size: 20px;
 	color: #e8a9a9;
 }
-.containerItem2:hover .item-heart {
-	transition: 3s;
-	color: red;
+.ctnhd-item2 {
+	font-size: 20px;
 }
 .ctn2-item {
 	width: 500px;
@@ -265,29 +282,28 @@ body {
 .ctn2-item5 {
 	font-weight: 600;
     font-size: 56px;
-    font-family: PlayfairDisplay;
+    font-family: Playfair Display;
 }
 .ctn2-item6 {
 	width: 100%;
 }
 .ctn2-item7 {
-	width: 450px;
     font-family: JosefinSlab;
     font-size: 20px;
     color: #765a33;
 }
 .ctn2-item8 {
-	background-color: #454545;
-	padding: 8px 20px;
-	border: none;
-	border-radius: 20px;
+	text-decoration: none;
 }
-.ctn2-item8:hover {
+.ctn2-item8:hover , .ctnbw-item2:hover {
 	opacity: 0.8;
 	transition: 1s;
 }
 .ctn2-item9 {
 	color: #fff;
+	background-color: #454545;
+	padding: 8px 20px;
+	border-radius: 20px;
 }
 .ctn2-item10 {
 	display: flex;
@@ -304,9 +320,6 @@ body {
     z-index: -1;
     width: 200px;
 }
-.leftctn3 {
-	text-align: center;
-}
 .ctn3-item7 {
     font-family: JosefinSlab;
     font-size: 20px;
@@ -315,11 +328,6 @@ body {
 /* container5 */
 .ctn5-item {
 	text-align: center;
-}
-.ctn5-item2 {
-	font-family: PlayfairDisplay;
-	font-size: 60px;
-	font-weight: 600;
 }
 .ctn5-item3 {
 	font-family: JosefinSlab;
@@ -339,7 +347,7 @@ body {
 	background-color: #c87e6b;
 	padding: 8px 20px;
 	border-radius: 20px;
-	border: none;
+	text-decoration: none;
 }
 .ctn5-item6:hover {
 	background-color: #c85234;
@@ -347,7 +355,7 @@ body {
 }
 .ctn5-item7 {
 	color: #fff;
-	font-family: MontserratAlternates;
+	font-family: Montserrat Alternates;
 	font-weight: 600;
 }
 
@@ -395,6 +403,9 @@ body {
 	top: 100% !important;
 	color: black !important;
 	margin-top: 0px !important;
+	clip-path: circle();
+    background-color: #8d8888;
+    padding: 30px 50px;
 }
 .swiper-button-next {
 	right: -30px !important;
@@ -407,7 +418,19 @@ body {
 		display: none !important;
 	}
 	.item2 {
-	    font-size: 25px;
+	    width: 20px;
+	    margin: 0 8px !important;
+	}
+	.item6 {
+		font-size: 16px;
+	}
+	.item7 {
+		width: 100%;
+		font-size: 13px;
+	}
+	.lefthd-item {
+	    object-fit: fill;
+	    height: 30px;
 	}
 	.containerItem3 > h2 {
 		font-size: 50px;	
@@ -431,20 +454,24 @@ body {
 		font-size: 36px;
 	}
 	/* container3 */
+	.containerItem > h2 , .containerItem3 > h2 {
+		font-size: 40px;
+	}
 	.containerItem7 , .containerItem8 , .containerItem6 , .containerItem4 ,
 	.ctn2-item2 , .ctn2-item3  , .ctn2-item10 , .ctn3-item2 , .ctn3-item3 , .ctn4-item2 , .ctn4-item3{
 		display: none;
 	}
 	.row {
-		--bs-gutter-x: 0 !important; {
-			font-size: 40px;	
-		}
+		--bs-gutter-x: 0 !important;
 	}
 	.ctnBanner-item5 {
 		font-size: 70px;
 	}
 	.ctnBanner-item3 {
 		width: 50px;
+	}
+	.ctnbt-item {
+		width: 100%;
 	}
 	/* container2 */
 	.ctn2-item4  {
@@ -475,6 +502,9 @@ body {
 	.click-hd2 {
 		font-size: 13px;
 	}
+	.ctnBanner-item9 {
+		height: 230px;
+	}
 	/* footer */
 	.ftMxh-item2 {
 		width: 100%;
@@ -502,16 +532,25 @@ body {
 	.item4 {
 		margin-top: 0;
 	}
+	.item7 {
+		width: 315px;
+	}
 	.hdBox {
-		width: 100%
+		width: 100%;
+		text-align: center;
 	}
 	.item5 {
-		font-size: 36px;
+		font-size: 50px;
 	}
 	/* container3 */
-	.containerItem7 , .containerItem8 , .containerItem6 , .containerItem4 ,
-	.ctn2-item2 , .ctn2-item3  , .ctn2-item10 , .ctn3-item2 , .ctn3-item3 , .ctn4-item2 , .ctn4-item3{
-		display: none;
+	.containerItem > h2 , .containerItem3 > h2 {
+		font-size: 50px;
+	}
+	.containerItem {
+		width: 50%;
+	}
+	.container {
+		--bs-gutter-x: 0 !important;
 	}
 	.row {
 		--bs-gutter-x: 0 !important;
@@ -522,15 +561,24 @@ body {
 	.ctnBanner-item3 {
 		width: 50px;
 	}
+	.ctnbt-item {
+		object-fit: cover;
+	    width: 100%;
+	    height: 300px;
+	}
+	.ctnbw-item {
+	    font-size: 18px;
+	}
+	.rigtctn2 , .leftctn4 {
+		justify-content: center;
+	}
 	/* container2 */
 	.ctn2-item4  {
 		display: flex;
 	}
-	.ctn2-item5 , .ctn2-item6{
-		text-align: center;
-	}
-	.ctn2-item7 {
+	.ctn2-item7 , .ctn3-item7{
 		width: 100%;
+		font-size: 22px;
 	}
 	.ctn2-item11 {
 		justify-content: center;
@@ -548,6 +596,14 @@ body {
 	.ctnvideo2 {
 		height: 400px !important;
 	}
+	.ctnBanner-item9 {
+		height: 250px;
+	}
+	.ctn5-item2 {
+		font-family: Playfair Display;
+		font-size: 45px;
+		font-weight: 600;
+	}
 	/* footer */
 	.ftMxh-item2 {
 		width: 100%;
@@ -556,6 +612,18 @@ body {
 	}
 	.ftMxh-item3 {
 		margin: 0 8px;
+	}
+}
+@media (min-width: 576px) {
+	.item5 {
+	    font-size: 55px;
+	}
+	.ctn2-item7, .ctn3-item7 {
+	    width: 400px;
+	    font-size: 22px;
+	}
+	.ctnbw-item {
+	    font-size: 14px;
 	}
 }
 @media (min-width: 768px) {
@@ -567,11 +635,27 @@ body {
 		font-size: 26px;
 	}
 	/* container */
+	.containerItem {
+		width: 70%;
+	}
+	.containerItem > h2 , .containerItem3 > h2 {
+		font-size: 60px;
+	}
+	.container {
+		--bs-gutter-x: 2.5rem !important;
+	}
 	.containerItem4 {
-		width: 350px;
+		width: 300px;
 	}
 	.containerItem6 {
 		width: 220px;
+	}
+	.ctn2-item7 , .ctn3-item7{
+		width: 400px;
+		font-size: 24px;
+	}
+	.ctn2-item11 {
+	    justify-content: start;
 	}
 	.ctn3-item2 {
 	    left: -10px;
@@ -584,7 +668,7 @@ body {
 		display: none;
 	}
 	.ctnBanner-item5 {
-	    line-height: 80px;
+	    line-height: 120px;
 	}
 	.ctn4-item2 {
 		right: -10px;
@@ -608,6 +692,17 @@ body {
 	.ctnBanner-item {
 		margin: 0;
 	}
+	.ctnbt-item {
+		height: 385px;
+		object-fit: cover;
+	    width: 100%;
+	}
+	.rigtctn2 {
+		justify-content: center;
+	}
+	.ctn5-item2 {
+		font-size: 50px;
+	}
 	/* footer */
 	.ftItem > h3 {
 	    font-size: 30px;
@@ -622,11 +717,11 @@ body {
 	.ctnBanner-item {
 		padding: 6px 20px;
 	}
-	.ctnBanner-item8 {
-		width: 45px !important;
+	.righthd-item2 {
+		height: 500px;
 	}
-	.righthd-item1 {
-		width: 600px;
+	.ctnBanner-item9 {
+		height: 280px;
 	}
 
 }
@@ -646,29 +741,34 @@ body {
 		width: 25% !important;
 	}
 	.item5 {
-	    font-size: 60px;
-	    margin-top: 50px !important
+	    font-size: 65px;
 	}
 	.item7 {
-		font-size: 18px;
+		font-size: 20px;
+    	width: 370px;
     	text-align: start;
 	}
 	.item13 {
-		bottom: -5%;
+		bottom: -7%;
 		width: 80px;
 	}
-	.righthd-item1 {
-	    width: 100%;
-	}
 	/* main */
+	.containerItem {
+		width: 80%;
+	}
 	.ctnBanner-item5 {
 		font-size: 110px;
+		line-height: 120px;
+	}
+	.ctn2-item7 , .ctn3-item7{
+		width: 400px;
+	}
+	.ctn2-item11 {
+	    justify-content: center;
+	    display: flex;
 	}
 	.ctn5-item4 {
 		width: 700px !important;
-	}
-	.ctn4-item2 , .ctn4-item3 , .ctn3-item2 , .ctn3-item3 {
-		display: block;
 	}
 	.ctn4-item2 {
 	    right: -20px;
@@ -689,6 +789,35 @@ body {
 	    top: 270px;
 	    right: -20px;
 	}
+	.ctnbt-item {
+		height: 525px;
+		object-fit: cover;
+	    width: 100%;
+	}
+	.containerItem4 {
+		top: -5%;
+		width: 350px;
+	}
+	.containerItem6 {
+		bottom: -3%;
+    	left: -2%;
+	}
+	.righthd-item2 {
+		height: 600px;
+		width: 100%;
+	}
+	.ctn5-item2 {
+		font-size: 60px;
+	}
+	.ctnbw-item {
+	    font-size: 16px;
+	}
+	.rigtctn2 {
+	    justify-content: start;
+	}
+	.leftctn3 {
+		justify-content: end !important;
+	}
 	/* footer */
 	.footerMxh {
 		justify-content: end;
@@ -705,25 +834,45 @@ body {
 	.ctnvideo2 {
 		height: 600px !important;
 	}
+	.ctnBanner-item9 {
+		height: 320px;
+	}
 }
 @media (min-width: 1200px ) {
 	/* header */ 
 	.item5 {
 		font-size : 80px;
 	}
+	.item6 {
+	    font-size: 34px;
+	}
 	.item7 {
 		display: flex;
 		justify-content: center;
-		font-size: 22px;
+		font-size: 28px;
+		width: 500px;
 	}
 	.item13 {
-		bottom: -5%;
+		bottom: -7%;
 		width: 100px;
 	}
 	.righthd-item1 {
 		width: 100%;
 	}
+	.righthd-item2 {
+		width: 100%;
+		height: 700px;
+	}
 	/* container */
+	.containerBottom {
+		padding-bottom: 150px;
+	}
+	.containerItem8 {
+	    position: absolute;
+	    right: 0;
+	    bottom: -9%;
+	    width: 100px;
+	}
 	.ctn3-item2 {
 	    left: -20px;
 	    top: -20px;
@@ -743,6 +892,14 @@ body {
 		bottom: -25px;
    		left: -30px;
 	}
+	.ctnbt-item {
+		object-fit: cover;
+	    width: 100%;
+	    height: 700px
+	}
+	.ctnBanner-item3 {
+		width: 70px;
+	}
 	/* footer */
 	.ftItem > h3 {
     	font-size: 45px;
@@ -757,9 +914,6 @@ body {
 	.ctn2-item11 {
 	    justify-content: start;
 	}
-	.ctn2-item4 {
-		justify-content: start;
-	}
 	.ctn3-title {
 		display: grid;
 		justify-content: end;
@@ -773,6 +927,9 @@ body {
 	}
 	.ctn5-item3 {
 	    font-size: 20px;
+	}
+	.ctnBanner-item9 {
+		height: 400px;
 	}
 }
 
