--- a/flower-store/assets/scss/_banner.scss
+++ b/flower-store/assets/scss/_banner.scss
@@ -66,8 +66,11 @@
       right: -1rem;  
       width: 4.75rem;
       @include minWidth(992px) {
-        top: -8rem;
+        top: -2rem;
         right: -6rem;
+      }
+      @include minWidth(992px) {
+        top: -8rem;
       }
     }
 
