--- a/flower-store/assets/scss/_menu-header.scss
+++ b/flower-store/assets/scss/_menu-header.scss
@@ -22,12 +22,16 @@
     margin-left: -2.5rem;
     margin-right: -2.5rem;
     li {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       padding-left: 2.5rem;
       padding-right: 2.5rem;
     }
 
     a {
       font-size: 0.75rem;
+      line-height: 1;
       font-weight: 800;
     }
   }
