--- a/flower-store/assets/css/index.css
+++ b/flower-store/assets/css/index.css
@@ -42597,6 +42597,11 @@ textarea {
   .banner .box-image-position .image-2 {
     bottom: -9rem;
     left: -3.5rem;
+    width: 8.875rem;
+  }
+}
+@media (min-width: 1440px) {
+  .banner .box-image-position .image-2 {
     width: 11.875rem;
   }
 }
